# todo-app-with-distributed-tracing

./: .gitignore  AGENTS.md  Caddyfile  JustFile  LICENSE  README.md  alloy-config.alloy  flake.nix  loki-config.yaml  observability-Caddyfile  otel-collector-config.yaml  prometheus.yml  ui-config.json
backend/: .env.example  Cargo.toml
backend/src/: main.rs  observability.rs
backend/src/application/: auth_service.rs  mod.rs  todo_service.rs
backend/src/domain/: mod.rs  repository.rs  todo.rs  user.rs
backend/src/infrastructure/: mod.rs  sqlite_repository.rs
backend/src/interfaces/: http.rs  mod.rs  rate_limit.rs
frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  frontend-observability.test.ts  frontend-observability.ts  http-route.test.ts  http-route.ts  index.css  main.tsx  store.ts  telemetry.ts
grafana/dashboards/: edge-tasks-log-table.json  edge-tasks-overview.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
scripts/: _lib.sh  backend-stop.sh  caddy-run.sh  caddy-validate.sh  observability-logs.sh  observability-start.sh  observability-stop.sh  reset-db.sh  start.sh  status.sh  stop.sh
