[package]
name = "axum-otel-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"

opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry-http = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "rt-tokio"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = {
  version = "0.9",
  default-features = false,
  features = ["runtime-tokio", "sqlite", "derive"]
}
thiserror = "2"
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = {
  version = "0.3",
  features = ["env-filter", "fmt", "json"]
}

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
